# np2-wasm

./: .editorconfig  .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  README_ja.md  build-wasm.sh  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
example/: example.html  example.js  index.html
font/: makefont.cjs  makefont.js
font/base/: README2.TXT
shell/: elements.ts  example.ts  index.ts  np2-wasm.ts  np2.d.ts  np21.d.ts  tsconfig.json
src/: CMakeLists.txt  common.h  keystat.tbl  update.txt
src/bios/: keytable.res
src/embed/menubase/: menusys.c
src/fdd/: diskdrv.c  fdd_d88.c  fdd_xdf.c  sxsihdd.c
src/sdl2/: ini.c  mousemng.c  mousemng.h  np2.c  np2.h  scrnmng.c  sdlkbd.c  taskmng.c
src/sdl2/emscripten/: Makefile  compiler.h  main.c
src/sound/: sndcsec.c  sndcsec.h
src/win9x/: winkbd.cpp
